--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body-index">
 <!-- ============================== HEADER ============================== -->
     <header class="header">        
-        <nav class="header-nav">
+        <div class="inheader">
             <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -27,15 +29,15 @@
                     <a class="menu-link link" href="">Контакты</a>
                 </li>
             </ul>
-        </nav>  
-        <ul class="contacts list">
-            <li>
-                <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>         
+            <ul class="contacts list">
+                <li class="contacts-item">
+                    <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contacts-item">
+                    <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>  
+        </div>
     </header>
 <!-- ============================== END HEADER ============================== -->
 
@@ -55,15 +57,15 @@
                     <h3 class="advantages-item-title">Внимание к деталям</h3>
                     <p class="advantages-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
+                <li class="advantages-item>
                     <h3 class="advantages-item-title">Пунктуальность</h3>
                     <p class="advantages-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
+                <li class="advantages-item>
                     <h3 class="advantages-item-title">Планирование</h3>
                     <p class="advantages-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
+                <li class="advantages-item>
                     <h3 class="advantages-item-title">Современные технологии</h3>
                     <p class="advantages-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
