--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
                     <h3 class="advantages-item-title">Внимание к деталям</h3>
                     <p class="advantages-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="advantages-item>
+                <li class="advantages-item">
                     <h3 class="advantages-item-title">Пунктуальность</h3>
                     <p class="advantages-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="advantages-item>
+                <li class="advantages-item">
                     <h3 class="advantages-item-title">Планирование</h3>
                     <p class="advantages-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="advantages-item>
+                <li class="advantages-item">
                     <h3 class="advantages-item-title">Современные технологии</h3>
                     <p class="advantages-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -107,7 +107,7 @@
                     <img class="team-img" 
                         src="./images/team/team-img1.jpg" 
                         alt="фото Игорь Демьяненко"
-                        width="270" height="260">
+                        width="268" height="258">
                     <h3 class="team-img-title">Игорь Демьяненко</h3>
                     <p class="team-img-text" lang="en">Product Designer</p>
                 </li>
@@ -115,7 +115,7 @@
                     <img class="team-img"
                         src="./images/team/team-img2.jpg" 
                         alt="фото Ольга Репина" 
-                        width="270" height="260">
+                        width="268" height="258">
                     <h3 class="team-img-title">Ольга Репина</h3>
                     <p class="team-img-text" lang="en">Frontend Developer</p>
                 </li>
@@ -123,7 +123,7 @@
                     <img class="team-img"
                         src="./images/team/team-img3.jpg" 
                         alt="фото Николай Тарасов"
-                        width="270" height="260">
+                        width="268" height="258">
                     <h3 class="team-img-title">Николай Тарасов</h3>
                     <p class="team-img-text" lang="en">Marketing</p>
                 </li>
@@ -131,7 +131,7 @@
                     <img class="team-img"
                         src="./images/team/team-img4.jpg" 
                         alt="фото Михаил Ермаков"
-                        width="270" height="260">
+                        width="268" height="258">
                     <h3 class="team-img-title">Михаил Ермаков</h3>
                     <p class="team-img-text" lang="en">UI Designer</p>
                 </li>
