--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
-<body class="body-index">
+<body>
 <!-- ============================== HEADER ============================== -->
     <header class="header">        
         <div class="inheader">
