--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 
-<body class="body-portfolio">
+<body>
 <!-- ============================== HEADER ============================== -->
     <header class="header">        
-        <nav class="header-nav">
+        <div class="inheader">
             <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -30,19 +30,19 @@
                     <a class="menu-link link" href="">Контакты</a>
                 </li>
             </ul>
-        </nav>  
-        <ul class="contacts list">
-            <li>
-                <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>         
+            <ul class="contacts list">
+                <li class="contacts-item">
+                    <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contacts-item">
+                    <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>  
+        </div>
     </header>
 <!-- ============================== END HEADER ============================== -->
 
-    <main>
+    <main class="portfolio-main">
         <section class="projects">
             <!-- ============================== PAGE NAVIGATION ============================== -->   
             <ul class="wiev list">
@@ -72,8 +72,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img1.jpg"
                         alt="Страница вебсайта"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Технокряк</h3>
                     <p class="projects-img-text">Вебсайт</p>
                 </li>
@@ -81,8 +81,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img2.jpg"
                         alt="Два баскетболиста"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Постер New Orlean vs Golden Star</h3>
                     <p class="projects-img-text">Дизайн</p>
                 </li>
@@ -90,8 +90,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img3.jpg"
                         alt="Логотип ресторана Seafood"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Ресторан Seafood</h3>
                     <p class="projects-img-text">Приложение</p>
                 </li>
@@ -99,8 +99,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img4.jpg"
                         alt="Наушники"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Проект Prime</h3>
                     <p class="projects-img-text">Маркетинг</p>
                 </li>
@@ -108,8 +108,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img5.jpg"
                         alt="Две картонные коробочки"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Проект Boxes</h3>
                     <p class="projects-img-text">Приложение</p>
                 </li>
@@ -117,8 +117,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img6.jpg"
                         alt="Монитор компьютера"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Inspiration has no Borders</h3>
                     <p class="projects-img-text">Веб-сайт</p>
                 </li>
@@ -126,8 +126,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img7.jpg"
                         alt="Открытая книга"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Издание Limited Edition</h3>
                     <p class="projects-img-text">Дизайн</p>
                 </li>
@@ -135,8 +135,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img8.jpg"
                         alt="Тэг с надписью LAB EL TAG"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Проект LAB</h3>
                     <p class="projects-img-text">Маркетинг</p>
                 </li>
@@ -144,8 +144,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img9.jpg"
                         alt="Ноутбук"
-                        width="370"
-                        height="294">
+                        width="368"
+                        height="292">
                     <h3 class="projects-img-title">Growing Business</h3>
                     <p class="projects-img-text">Приложение</p>
                 </li>          
