--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <!-- ============================== HEADER ============================== -->
     <header class="header">        
-        <div class="inheader">
+        <div class="inheader container">
             <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -43,14 +43,16 @@
 
     <main>
 <!-- ============================== HERO ============================== -->
-        <section class="hero">
-            <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br/>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <button class="modal-btn" type="button">Заказать услугу</button>
-        </section> 
+        <div class="hero-bg">
+            <section class="hero container">
+                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br/>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <button class="modal-btn" type="button">Заказать услугу</button>
+            </section> 
+        </div>
 <!-- ============================== END HERO ============================== -->         
 
 <!-- ============================== ADVANTANGES ============================== -->
-        <section class="advantages">
+        <section class="advantages container">
             <h2 class="advantages-title" hidden>Преимущества</h2>
             <ul class="advantages-list list">
                 <li class="advantages-item">
@@ -74,7 +76,7 @@
 <!-- ============================== END ADVANTANGES ============================== -->        
 
 <!-- ============================== WHAT-WE-DO ============================== -->
-        <section class="works">
+        <section class="works container">
             <h2 class="works-title">Чем мы занимаемся</h2>
             <ul class="works-list list">
                 <li class="workrs-item">
@@ -100,7 +102,7 @@
 <!-- ============================== END WHAT-WE-DO ============================== -->
 
 <!-- ============================== TEAM ============================== -->
-        <section class="team">
+        <section class="team container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-item">
@@ -141,23 +143,25 @@
     </main>
 
     <!-- ============================== FOOTER ============================== -->
-    <footer class="footer">
-        <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
-        <address class="adr">
-            <ul class="adr-list list">
-                <li class="adr-item">
-                    <a class="adr-map link"href="https://goo.gl/maps/uvsgUwdAActYUTXB9" target="_blank" rel="noopener noreferrer">
-                    г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="adr-item">
-                    <a class="adr-mail link" href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li class="adr-item ">
-                    <a class="adr-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
-    </footer>
+    <div class="footer-bg">
+        <footer class="footer container">
+            <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
+            <address class="adr">
+                <ul class="adr-list list">
+                    <li class="adr-item">
+                        <a class="adr-map link"href="https://goo.gl/maps/uvsgUwdAActYUTXB9" target="_blank" rel="noopener noreferrer">
+                        г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="adr-item">
+                        <a class="adr-mail link" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class="adr-item ">
+                        <a class="adr-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </footer>
+    </div>
 <!-- ============================== END FOOTER ============================== -->  
     
 </body>
