--- a/portfolio.html
+++ b/portfolio.html
@@ -16,34 +16,34 @@
 
 <body>
 <!-- ============================== HEADER ============================== -->
-    <header class="header">        
-        <div class="inheader">
-            <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
-            <ul class="menu list">
-                <li class="menu-item">
-                    <a class="menu-link link" href="./index.html">Студия</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link link" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link link" href="">Контакты</a>
-                </li>
-            </ul>
-            <ul class="contacts list">
-                <li class="contacts-item">
-                    <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="contacts-item">
-                    <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>  
-        </div>
-    </header>
+<header class="header">        
+    <div class="inheader container">
+        <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
+        <ul class="menu list">
+            <li class="menu-item">
+                <a class="menu-link link" href="./index.html">Студия</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link link" href="">Контакты</a>
+            </li>
+        </ul>
+        <ul class="contacts list">
+            <li class="contacts-item">
+                <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="contacts-item">
+                <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>  
+    </div>
+</header>
 <!-- ============================== END HEADER ============================== -->
 
     <main class="portfolio-main">
-        <section class="projects">
+        <section class="projects container">
             <!-- ============================== PAGE NAVIGATION ============================== -->   
             <ul class="wiev list">
                 <li class="wiev-item">
@@ -72,8 +72,8 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img1.jpg"
                         alt="Страница вебсайта"
-                        width="368"
-                        height="292">
+                        width="370"
+                        height="294">
                     <h3 class="projects-img-title">Технокряк</h3>
                     <p class="projects-img-text">Вебсайт</p>
                 </li>
@@ -81,7 +81,7 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img2.jpg"
                         alt="Два баскетболиста"
-                        width="368"
+                        width="370"
                         height="292">
                     <h3 class="projects-img-title">Постер New Orlean vs Golden Star</h3>
                     <p class="projects-img-text">Дизайн</p>
@@ -90,7 +90,7 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img3.jpg"
                         alt="Логотип ресторана Seafood"
-                        width="368"
+                        width="370"
                         height="292">
                     <h3 class="projects-img-title">Ресторан Seafood</h3>
                     <p class="projects-img-text">Приложение</p>
@@ -99,7 +99,7 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img4.jpg"
                         alt="Наушники"
-                        width="368"
+                        width="370"
                         height="292">
                     <h3 class="projects-img-title">Проект Prime</h3>
                     <p class="projects-img-text">Маркетинг</p>
@@ -108,7 +108,7 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img5.jpg"
                         alt="Две картонные коробочки"
-                        width="368"
+                        width="370"
                         height="292">
                     <h3 class="projects-img-title">Проект Boxes</h3>
                     <p class="projects-img-text">Приложение</p>
@@ -117,7 +117,7 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img6.jpg"
                         alt="Монитор компьютера"
-                        width="368"
+                        width="370"
                         height="292">
                     <h3 class="projects-img-title">Inspiration has no Borders</h3>
                     <p class="projects-img-text">Веб-сайт</p>
@@ -126,7 +126,7 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img7.jpg"
                         alt="Открытая книга"
-                        width="368"
+                        width="370"
                         height="292">
                     <h3 class="projects-img-title">Издание Limited Edition</h3>
                     <p class="projects-img-text">Дизайн</p>
@@ -135,7 +135,7 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img8.jpg"
                         alt="Тэг с надписью LAB EL TAG"
-                        width="368"
+                        width="370"
                         height="292">
                     <h3 class="projects-img-title">Проект LAB</h3>
                     <p class="projects-img-text">Маркетинг</p>
@@ -144,7 +144,7 @@
                     <img class="projects-img" 
                         src="./images/portfolio/portfolio-img9.jpg"
                         alt="Ноутбук"
-                        width="368"
+                        width="370"
                         height="292">
                     <h3 class="projects-img-title">Growing Business</h3>
                     <p class="projects-img-text">Приложение</p>
@@ -155,23 +155,25 @@
     </main>
 
     <!-- ============================== FOOTER ============================== -->
-    <footer class="footer">
-        <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
-        <address class="adr">
-            <ul class="adr-list list">
-                <li class="adr-item">
-                    <a class="adr-map link" href="https://goo.gl/maps/uvsgUwdAActYUTXB9" target="_blank" rel="noopener noreferrer">
-                    г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="adr-item">
-                    <a class="adr-mail link" href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li class="adr-item ">
-                    <a class="adr-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
-    </footer>
+    <div class="footer-bg">
+        <footer class="footer container">
+            <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
+            <address class="adr">
+                <ul class="adr-list list">
+                    <li class="adr-item">
+                        <a class="adr-map link"href="https://goo.gl/maps/uvsgUwdAActYUTXB9" target="_blank" rel="noopener noreferrer">
+                        г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="adr-item">
+                        <a class="adr-mail link" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class="adr-item ">
+                        <a class="adr-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </footer>
+    </div>
 <!-- ============================== END FOOTER ============================== --> 
     
 </body>
