--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
 <!-- ============================== HERO ============================== -->
     <section class="hero">
-        <div class="hero-content container">
+        <div class="container">
             <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br/>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button class="modal-btn" type="button">Заказать услугу</button>
         </div>
@@ -54,7 +54,7 @@
 
 <!-- ============================== ADVANTANGES ============================== -->
         <section class="advantages">
-            <div class="advantages-content container">
+            <div class="container">
                 <h2 class="advantages-title" hidden>Преимущества</h2>
                 <ul class="advantages-list list">
                     <li class="advantages-item">
@@ -80,7 +80,7 @@
 
 <!-- ============================== WHAT-WE-DO ============================== -->
         <section class="works">
-            <div class="works-content container">
+            <div class="container">
                 <h2 class="works-title">Чем мы занимаемся</h2>
                 <ul class="works-list list">
                     <li class="workrs-item">
@@ -108,7 +108,7 @@
 
 <!-- ============================== TEAM ============================== -->
         <section class="team">
-            <div class="team-content container">                
+            <div class="container">                
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-item">
@@ -160,7 +160,7 @@
 
     <!-- ============================== FOOTER ============================== -->
     <footer class="footer">
-        <div class="footer-content container">
+        <div class="container">
             <a class="logo-link link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
             <address class="adr">
                 <ul class="adr-list list">
